@@ -96,3 +96,4 @@
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/.cvsignore;  cvs diff -u -r 1.2.2.64 -r 1.2.2.65 src/vcal_folder.c;  cvs diff -u -r 1.1.2.58 -r 1.1.2.59 src/vcal_meeting_gtk.c;  ) > 1.94.0cvs3.patchset
 ( cvs diff -u -r 1.2.2.185 -r 1.2.2.186 configure.ac;  ) > 1.94.0cvs4.patchset
 ( cvs diff -u -r 1.2.2.51 -r 1.2.2.52 src/vcalendar.c;  ) > 1.94.0cvs5.patchset
+( cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/vcal_prefs.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/vcal_prefs.h;  cvs diff -u -r 1.2.2.52 -r 1.2.2.53 src/vcalendar.c;  ) > 1.94.0cvs6.patchset
