@@ -1,3 +1,13 @@
+2007-03-22 [colin]	1.94.0cvs6
+
+	* src/vcal_prefs.c
+	* src/vcal_prefs.h
+	* src/vcalendar.c
+		Don't register to Orage without user
+                interaction - mainly because Orage from
+                Xfce 4.4 didn't handle command line
+                parameters
+
 2007-03-22 [colin]	1.94.0cvs5
 
 	* src/vcalendar.c
